[package]
name = "tx2-link"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
bincode = "1.3"
tokio = { version = "1.0", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
thiserror = "1.0"
bytes = "1.0"
ahash = "0.8"

[features]
default = []
async = ["tokio", "async-trait"]
websocket = ["async", "tokio-tungstenite"]
ipc = ["async"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
criterion = "0.5"

[[bench]]
name = "serialization"
harness = false

[dependencies.tokio-tungstenite]
version = "0.21"
optional = true
